# ambientika-py

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ambientika/: __init__.py
src/ambientika_py/: __init__.py
