[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ambientika"
version = "0.0.3"
authors = [
    { name = "Genna Wingert", email = "wingertge@gmail.com" }
]
description = "An API wrapper for Ambientika smart devices"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "aiohttp"
]

[project.urls]
Homepage = "https://github.com/wingertge/ambientika-py"
Issues = "https://github.com/wingertge/ambientika-py/issues"